[package]
name = "delay_queue_test"
version = "0.1.0"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"

# Uncomment to make it work
# tokio-timer = "=0.2.9"

# Adds https://github.com/tokio-rs/tokio/pull/2217
# tokio-timer = { git = "https://github.com/xoac/tokio-timer-patched", rev = "dc9e4d83e736d11b1f5335679ff2aba4edf94426" }
